# brainfC

./: CMakeLists.txt  README.md  brainf.c  brainfuck.c  stack.c  stack.h
